--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "jose": "^5.2.3",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
